fix: horizontal scrolling (navbar and description css)

--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -5,7 +5,6 @@
   padding: 10px 0;
   background-color: rgb(12, 0, 0);
   box-shadow: 0 2px 4px rgba(251, 35, 35, 0.1);
-  width: 100vw;
 }
 
 .logo {
